[package]
name = "nixpkgs-using"
version = "0.1.0"
authors = ["uncenter <uncenter@uncenter.dev>"]
license = "MIT"
description = "Find packages that you use that are currently being updated in Nixpkgs."
readme = "README.md"
homepage = "https://github.com/uncenter/nixpkgs-using"
repository = "https://github.com/uncenter/nixpkgs-using"
keywords = ["cli"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
color-eyre = "0.6.3"
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
tabled = "0.15.0"
tokio = { version = "1.37.0", features = ["full"] }
users = "0.11.0"

[lints.clippy]
all = "warn"
pedantic = "warn"
