[package]
name = "nixpkgs-using"
version = "0.1.0"
authors = ["uncenter <uncenter@uncenter.dev>"]
license = "MIT"
description = "Find packages that you use that are currently being updated in Nixpkgs."
readme = "README.md"
homepage = "https://github.com/uncenter/nixpkgs-using"
repository = "https://github.com/uncenter/nixpkgs-using"
keywords = ["cli"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.9", features = ["derive", "env"] }
color-eyre = "0.6.3"
etcetera = "0.8.0"
graphql_client = { version = "0.14.0", features = ["reqwest-blocking"] }
reqwest = { version = "^0.11", features = ["json", "blocking"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.117"
tabled = "0.15.0"
users = "0.11.0"

[lints.clippy]
all = "warn"
pedantic = "warn"
